Preserve encrypted passwords when backing up domains, in case they don't match the plaintext password stored by Virtualmin. Also, have validation report an error in the case of a mismatch.
Re-organized the custom links page to move editing of each link into a separate form, and allow links to be limited to virtual servers with some feature enabled.
---- Changes since 3.61 ----
Updated the Nucleus script installer to version 3.33, Xoops to 2.0.18.2, SugarCRM to 5.1.0, OpenX to 2.6.1, phpMyAdmin to 2.11.9, phpPgAdmin to 4.2.1, WordPress MU to 2.6.1, Magento to 1.0.19870.6, Django to 1.0, MediaWiki to 1.13.1, SMF to 1.1.6, Z-push to 1.2, and Movable Type to 4.21.
Added a button to edit pages as text (without the HTML editor) to the Edit Web Pages feature.
The configuration check now detects a missing or incorrect suexec, to easier find problems with the base directory that will break PHP and CGI scripts.
Added a new sort mode (used by default for new installs) to order virtual servers by domain name, but with sub-servers indented under them.
The frequency of script update notifications and whether to send the same notification twice can now be configured on the Script Installers configuration page.
Resellers can now read mail in all mailboxes under domains they control, if allowed on the Module Config page under 'Extra modules'.
Included domains for SPF for new virtual servers can now be set in server templates.
Added a button to the Edit Mailbox page for logging into Usermin as a user without having to enter their password. Requires Webmin 1.440 or later though.
On FreeBSD, the Gnu tar command gtar is used in preference to regular tar when installed. This allows incremental backups to be performed.
When MySQL is on a remote system, the 'show table status' command is used to get an approximate size for each database.